#UPDATE delete validations
